[package]
name = "vesting contract"
version = "0.1.0"

[features]
no-entrypoint = []

[dependencies]
thiserror = "1.0.23"
num-traits = "0.2"
num-derive = "0.3"
arrayref = "0.3.6"
solana-program = "1.5.6"
spl-token = { version = "3.0.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.2", features = ["no-entrypoint"] }
arbitrary = { version = "0.4", features = ["derive"], optional = true }

[dev-dependencies]
solana-sdk = "1.5.6"
tokio = { version = "1.0", features = ["macros"]}

[lib]
crate-type = ["cdylib", "lib"]
